--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   cached_network_image: ^3.0.0
   wave: ^0.2.0
   image_picker: ^0.7.4
+  firebase_auth: ^3.3.3
+  firebase_core: ^1.10.5
+  google_sign_in: ^5.2.1
+  cloud_firestore: ^3.1.4
+  firebase_storage: ^10.2.3
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
